--- a/css/style.css
+++ b/css/style.css
@@ -2347,7 +2347,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 
 .success-msg .block i {
     font-size: 40px;
-    background: #1bbb1b;
+    background: #8b9e8b;
     color: #fff;
     width: 60px;
     height: 60px;
@@ -2523,7 +2523,7 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 }
 
 .success {
-    background-color: #6cb670;
+    background-color: #709c72;
     border-radius: 4px;
     color: #fff;
     display: none;
@@ -2566,6 +2566,94 @@ input[type="email"]:focus, input[type="password"]:focus, input[type="text"]:focu
 .social-media li a i {
     font-size: 20px;
     color: #555;
+}
+
+.our-projects {
+    padding: 60px 0;
+}
+
+our-projects ul {
+    margin-top: 50px
+}
+
+.our-projects ul li {
+    display: inline-block;
+    border: 2px solid #AAA;
+    color: #AAA;
+    padding: 10px;
+    border-radius: 5px;
+    margin-right: 5px
+}
+
+.our-projects ul li.selected {
+    background-color: #869488;
+    border: 2px solid #656966;
+    color: #FFF
+}
+
+.our-projects .gallery {
+    margin-top: 50px;
+    overflow: hidden
+}
+
+.our-projects .gallery .row>div:nth-child(2) {
+    margin-right: 1%;
+    margin-left: 1%
+}
+
+.our-projects .gallery .row>div {
+    width: 32.66666%;
+    float: left;
+    margin-bottom: 12px;
+    background-color: #DDD;
+    position: relative
+}
+
+.our-projects .gallery .row>div .over {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    line-height: 232px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #FFF;
+    text-align: center;
+    background-color: rgba(154, 163, 156, 0.8);
+    display: none
+}
+
+.our-projects .gallery .row>div .heart {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    color: #FFF;
+    display: none
+}
+.container {
+    width: 1200px;
+    margin: auto;
+}
+
+
+.our-projects .gallery .row>div:hover .over,
+.our-projects .gallery .row>div:hover .heart {
+    display: block
+}
+
+.our-projects .gallery .row>div img {
+    width: 100%
+}
+
+.our-projects .shuffle li {
+    cursor: pointer
+}
+
+.our-projects .mix {
+    display: none
 }
 
 /*# sourceMappingURL=maps/style.css.map */
